# qwxzkv

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_generate.py
docs/: formalization.md  survey-typosquatting-supply-chain.md  taxonomy.md
docs/paper/: outline.md  related_work.md
docs/research/: critique.md  measurement-methodology.md  methods-and-eval.md  threat-landscape.md  threat-model.md
examples/: audit_pypi_package.py  least_squattable.py
python/typosquat/: __init__.py  _accel.py  _pyref.py  cli.py  confusables.py  ecosystems.py  generate.py  keyboard.py  metrics.py  score.py  transforms.py
rust/typosquat_core/: Cargo.toml
rust/typosquat_core/src/: lib.rs
tests/: test_cli.py  test_coverage.py  test_ecosystems.py  test_generate.py  test_golden.py  test_metrics.py  test_parity.py  test_properties.py  test_score.py  test_transforms.py
tests/data/: golden_cases.json
