[package]
name = "typosquat_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Acceleration kernel (edit distance + neighborhood closure) for the qwxzkv package-confusion engine."
repository = "https://github.com/odomojuli/qwxzkv"

[lib]
# Installed by maturin as the Python submodule `typosquat._core`.
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
